# linda

./: .gitignore  Cargo.toml  Dockerfile  README.md
sql/: scheme.sql
src/: main.rs
