[package]
name = "linda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
rand = "0.8.5"
rusqlite = { version = "0.30.0", features = ["bundled"] }
strum_macros = "0.25.3"
